[package]
name = "vendor-posthog-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
log = "0"
tokio = {version = "1", default-features = false, features = ["rt-multi-thread", "macros"]}
aws-config = "1"
aws-sdk-secretsmanager = "1"
hyper = { version = "0", features = ["client"]}
hyper-tls = "0.5"
[dev-dependencies]
pretty_assertions = "1"

